--- a/package.json
+++ b/package.json
@@ -8,7 +8,24 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@codemirror/lang-css": "^6.0.0",
+    "@codemirror/lang-html": "^6.1.0",
+    "@codemirror/lang-java": "^6.0.0",
+    "@codemirror/lang-javascript": "^6.0.2",
+    "@codemirror/lang-lezer": "^6.0.0",
+    "@codemirror/lang-markdown": "^6.0.1",
+    "@codemirror/lang-php": "^6.0.0",
+    "@codemirror/lang-python": "^6.0.1",
+    "@codemirror/lang-rust": "^6.0.0",
+    "@codemirror/lang-sql": "^6.2.0",
+    "@codemirror/lang-xml": "^6.0.0",
+    "@codemirror/language-data": "^6.1.0",
+    "@codemirror/legacy-modes": "^6.1.0",
+    "@codemirror/view": "^6.2.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -18,6 +35,9 @@
     "@trpc/next": "^9.27.0",
     "@trpc/react": "^9.27.0",
     "@trpc/server": "^9.27.0",
+    "@uiw/codemirror-extensions-langs": "^4.11.4",
+    "@uiw/codemirror-theme-github": "^4.11.4",
+    "@uiw/react-codemirror": "^4.11.4",
     "daisyui": "^2.24.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
