--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@codemirror/view": "^6.2.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@hookform/error-message": "^2.0.0",
+    "@hookform/resolvers": "^2.9.7",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
     "@tanstack/react-table": "^8.5.11",
@@ -43,6 +45,7 @@
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
