--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-query": "^3.39.2",
+    "react-use": "^17.4.0",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
