--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.7",
     "@next-auth/prisma-adapter": "^1.0.4",
+    "@next/bundle-analyzer": "^12.2.5",
     "@prisma/client": "^4.2.1",
     "@tanstack/react-table": "^8.5.11",
     "@trpc/client": "^9.27.0",
@@ -48,6 +49,7 @@
     "react-hook-form": "^7.34.2",
     "react-query": "^3.39.2",
     "react-use": "^17.4.0",
+    "sharp": "^0.30.7",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
