--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-use": "^17.4.0",
     "sharp": "^0.30.7",
     "superjson": "^1.9.1",
+    "ts-node": "^10.9.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
